# SlovakBench

./: .env.example  .gitignore  LICENSE  README.md  analyze_lang8.py  extract_lang8.py  lang8_analysis.txt  main.py  pyproject.toml  rank_sentences.py
config/: models.py
data/processed/exam/: 2023.json  2024.json  2025.json
data/processed/grammar/: lang8_slovak_simple.json  lang8_top20.json  ranked_candidates.md
data/processed/ud_snk/: benchmark.json
data/results/ud_snk/: claude-3.5-haiku.json  claude-3.5-sonnet.json  claude-haiku-4.5.json  claude-opus-4.5-thinking-high.json  claude-opus-4.5.json  claude-opus-4.json  claude-sonnet-4-non-thinking.json  claude-sonnet-4.5.json  claude-sonnet-4.json  command-a.json  deepseek-chat-v3.1-thinking.json  deepseek-chat-v3.1.json  deepseek-v3.2-thinking-high.json  deepseek-v3.2.json  devstral-medium.json  gemini-2.5-flash-lite-preview-09-2025-reasoning.json  gemini-2.5-flash-lite-preview-09-2025.json  gemini-2.5-flash-reasoning.json  gemini-2.5-flash.json  gemini-2.5-pro.json  gemini-3-pro-preview.json  glm-4.5.json  glm-4.5v.json  glm-4.6.json  glm-4.6v.json  gpt-4.1.json  gpt-4o.json  gpt-5-default.json  gpt-5-high.json  gpt-5-mini.json  gpt-5-minimal.json  gpt-5-nano.json  gpt-5.1-default.json  (+26 more)
frontend/: README.md  package-lock.json  package.json
frontend/public/: leaderboard.json
frontend/src/: proxy.ts  types.ts
public/: index.html
scripts/: resort_json.py
src/evaluation/: answer_validator.py  metrics.py  runner.py  ud_parser.py  ud_runner.py
src/ingestion/: mcq_parser.py
src/utils/: llm.py
(+181 files in other folders)
